<!--
  ~ Copyright 2017 NinetySlide
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Pop Movies</string>
    <string name="list_load_error">An error occurred during the loading of the movie list!</string>
    <string name="no_movies_error">There are no movies here yet!</string>
    <string name="movie_poster_description">Movie Poster</string>
    <string name="action_popular">Popular</string>
    <string name="action_toprated">Top Rated</string>
    <string name="tv_movie_original_title_lbl">Original Title: </string>
    <string name="tv_movie_release_date_lbl">Release Date: </string>
    <string name="tv_movie_vote_average_lbl">Vote Average: </string>
    <string name="title_placeholder">Movie Title</string>
    <string name="poster_detail_transition">poster_detail</string>
    <string name="action_favorite">Favorites</string>
    <string name="no_video_error">There are no videos to show for this movie</string>
    <string name="video_title">Related Videos:</string>
    <string name="review_title">Reviews:</string>
    <string name="no_review_error">There are no reviews to show for this movie</string>
    <string name="no_network_error">You seems to be offline. Turn on your internet connection to access this data!</string>
</resources>
