<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 NinetySlide
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ninetyslide.ext.popularmovies.MovieDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_movie_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/movie_poster_description"
                    android:scaleType="fitXY"
                    android:transitionName="@string/poster_detail_transition" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/tv_movie_original_title_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="@dimen/view_vertical_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:text="@string/tv_movie_original_title_lbl"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_movie_original_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="@dimen/view_vertical_margin"
                        android:layout_marginStart="@dimen/view_horizontal_margin"
                        android:layout_toEndOf="@id/tv_movie_original_title_lbl" />

                    <TextView
                        android:id="@+id/tv_movie_release_date_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/tv_movie_original_title"
                        android:layout_marginBottom="@dimen/view_vertical_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:text="@string/tv_movie_release_date_lbl"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_movie_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_movie_original_title"
                        android:layout_marginBottom="@dimen/view_vertical_margin"
                        android:layout_marginStart="@dimen/view_horizontal_margin"
                        android:layout_toEndOf="@id/tv_movie_original_title_lbl" />

                    <TextView
                        android:id="@+id/tv_movie_vote_average_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/tv_movie_release_date"
                        android:layout_marginBottom="@dimen/view_vertical_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:text="@string/tv_movie_vote_average_lbl"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_movie_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_movie_release_date"
                        android:layout_marginBottom="@dimen/view_vertical_margin"
                        android:layout_marginStart="@dimen/view_horizontal_margin"
                        android:layout_toEndOf="@id/tv_movie_vote_average_lbl" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_movie_desc"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
